Increases line height to prevent bottom of text getting cut off on Safari

--- a/src/_scss/pages/explorer/detail/visualization/table/_table.scss
+++ b/src/_scss/pages/explorer/detail/visualization/table/_table.scss
@@ -68,6 +68,7 @@
                             @include button-unstyled;
                             color: $color-primary;
                             font-size: rem(16);
+                            line-height: rem(20);
                         }
                     }
                 }
